--- a/index.html
+++ b/index.html
@@ -3,24 +3,75 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title>Shouting Machine</title>
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/scripts.js"></script>
+    <title>Calculator</title>
   </head>
   <body>
     <div class="container">
 
-        <form id="formOne">
-          <div class="form-group">
-            <label for="shout1">What do you want to Shout?</label>
-            <input id="shout1" class="form-control" type="text">
-          </div>
-          <button type="submit" class="btn btn-primary">Shout!</button>
-        </form>
+      <h1>Calculator</h1>
 
+      <form id="add">
+        <div class="form-group">
+          <label for="add1">1st number:</label>
+          <input id="add1" class="form-control" type="text">
+        </div>
 
-        <h1></h1>
-      </div>
+        <div class="form-group">
+          <label for="add2">2nd number:</label>
+          <input id="add2" class="form-control" type="text">
+        </div>
 
-    <script src="js/jquery-3.3.1.js"></script>
-    <script src="js/scripts.js"></script>
+        <button type="submit" class="btn btn-primary">Add!</button>
+      </form>
+      <div id="outputAdd"></div>
+
+      <form id="subtract">
+        <div class="form-group">
+          <label for="subtract1">1st number:</label>
+          <input id="subtract1" class="form-control" type="text">
+        </div>
+
+        <div class="form-group">
+          <label for="subtract2">2nd number:</label>
+          <input id="subtract2" class="form-control" type="text">
+        </div>
+
+        <button type="submit" class="btn btn-primary">Subtract!</button>
+      </form>
+      <div id="outputSubtract"></div>
+
+      <form id="multiply">
+        <div class="form-group">
+          <label for="multiply1">1st number:</label>
+          <input id="multiply1" class="form-control" type="text">
+        </div>
+
+        <div class="form-group">
+          <label for="multiply2">2nd number:</label>
+          <input id="multiply2" class="form-control" type="text">
+        </div>
+
+        <button type="submit" class="btn btn-primary">Multiply!</button>
+      </form>
+      <div id="outputMultiply"></div>
+
+      <form id="divide">
+        <div class="form-group">
+          <label for="divide1">1st number:</label>
+          <input id="divide1" class="form-control" type="text">
+        </div>
+
+        <div class="form-group">
+          <label for="divide2">2nd number:</label>
+          <input id="divide2" class="form-control" type="text">
+        </div>
+
+        <button type="submit" class="btn btn-primary">Divide!</button>
+      </form>
+      <div id="outputDivide"></div>
+
+    </div>
   </body>
 </html>
